⛴🐓 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -101,6 +101,6 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
     <script src="script.js"></script>
-    <script src="afd.js"></script>
+    <script src="DFA.js"></script>
   </body>
 </html>
